Fixed font size on smallest screen version for the wedding party text.

--- a/src/main/webapp/css/wedding.css
+++ b/src/main/webapp/css/wedding.css
@@ -406,7 +406,7 @@ body {
 	}
 	.ch-info h3 {
 		line-height: 11px;
-		/* 		font-size: 8px; */
+		font-size: 8px;
 		height: 65px;
 		padding-top: 30px;
 	}
